[package]
name = "dwiscord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] # From https://developers.facebook.com/blog/post/2020/09/30/build-discord-bot-with-rust-and-serenity/
tokio = { version = "0.2", features = ["macros"] }
serenity = { default-features = false, features = ["client", "gateway", "model", 
          "cache", "rustls_backend"], version = "0.9.0-rc.2"}
