[package]
name = "tcysm-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] # From https://developers.facebook.com/blog/post/2020/09/30/build-discord-bot-with-rust-and-serenity/
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serenity = { git = "https://github.com/serenity-rs/serenity.git", features = ["framework", "standard_framework"] }
dotenv = "0.15"

# Serde for the "database". This should be migrated to either pSQL or SQLite in the future
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
